--- a/blog-single.html
+++ b/blog-single.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Readit - Free Bootstrap 4 Template by Colorlib</title>
+    <title>MarTech Zone Blog - MarTech là gì?</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -59,42 +59,39 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 ftco-animate">
-          	<p class="mb-5">
-              <img src="images/image_1.jpg" alt="" class="img-fluid">
+            <p>Chắc hẳn đâu đó bạn đã từng nghe nhắc đến thuật ngữ Marketing Technology (hoặc MarTech), vậy bạn có bao giờ tự hỏi rằng MarTech là gì? Và vì sao gần đây MarTech đã và đang trở thành chủ đề được tranh luận sôi nổi trong giới marketer?</p>
+
+<p>Thông qua bài viết này, sẽ giúp bạn có cái nhìn chính xác hơn về xu hướng Marketing Technology và cách thức MarTech tác động và thay đổi môi trường kinh doanh hiện nay.</p>
+
+<h2 class="mb-3 mt-5">1. Tổng quan về MarTech</h2>
+
+<p>Theo định nghĩa đơn giản nhất, Marketing Technology chính là sự hợp nhất giữa công nghệ với các hoạt động marketing. Cụ thể, theo John Koetsier, chuyên gia phân tích thị trường – tạp chí Forbes, MarTech là tập hợp các giải pháp, nền tảng công nghệ phục vụ doanh nghiệp trong quá trình xây dựng chiến lược tiếp thị, quảng bá sản phẩm/ thương hiệu đến với khách hàng mục tiêu trên hàng loạt các kênh thông tin khác nhau.</p>
+<p>Tại một số doanh nghiệp MarTech được triển khai dưới dạng các tầng công nghệ khác nhau, trong đó các công cụ hoạt động song song, phối hợp cùng nhau thực hiện mục tiêu tiếp thị được đề ra một cách tự động. Dưới đây là một mô hình tầng công nghệ MarTech điển hình:</p>
+<p class="mb-5">
+              <img src="images/image_2.jpg" alt="" class="img-fluid">
             </p>
-            <h2 class="mb-3">It is a long established fact a reader be distracted</h2>
-            <p>Chắc hẳn đâu đó bạn đã từng nghe nhắc đến thuật ngữ Marketing Technology (hoặc MarTech), vậy bạn có bao giờ tự hỏi rằng MarTech là gì? Và vì sao gần đây MarTech đã và đang trở thành chủ đề được tranh luận sôi nổi trong giới marketer?
-
-Thông qua bài viết này, sẽ giúp bạn có cái nhìn chính xác hơn về xu hướng Marketing Technology và cách thức MarTech tác động và thay đổi môi trường kinh doanh hiện nay.
-
-Tổng quan về MarTech
-
-Theo định nghĩa đơn giản nhất, Marketing Technology chính là sự hợp nhất giữa công nghệ với các hoạt động marketing. Cụ thể, theo John Koetsier, chuyên gia phân tích thị trường – tạp chí Forbes, MarTech là tập hợp các giải pháp, nền tảng công nghệ phục vụ doanh nghiệp trong quá trình xây dựng chiến lược tiếp thị, quảng bá sản phẩm/ thương hiệu đến với khách hàng mục tiêu trên hàng loạt các kênh thông tin khác nhau.</p>
-            <h2 class="mb-3 mt-5">#2. Creative WordPress Themes</h2>
-            <p>Temporibus ad error suscipit exercitationem hic molestiae totam obcaecati rerum, eius aut, in. Exercitationem atque quidem tempora maiores ex architecto voluptatum aut officia doloremque. Error dolore voluptas, omnis molestias odio dignissimos culpa ex earum nisi consequatur quos odit quasi repellat qui officiis reiciendis incidunt hic non? Debitis commodi aut, adipisci.</p>
+            <h3 class="mb-3 mt-5">Chúng ta cùng tìm hiểu sâu thêm về MarTech</h3>
+            <p>Bạn có sử dụng MarTech không? Hầu như chắc chắn câu trả lời sẽ là có. Nếu bạn đã thực hiện bất kỳ phần nào trong hoạt động marketing của mình trong thế giới kỹ thuật số hiện nay, thì bạn là một phần của MarTech. Có thể là bạn đang sử dụng:</p>
+<p>Email marketing</p>
+<p>Customer relationship management (CRM) platforms</p>
+<p>Services to gauge customer satisfaction</p>
+<p>Website analytics</p>
+<p>Search or social media advertising</p>
+<p>Danh sách còn rất dài…</p>
             <p class="mb-5">
               <img src="images/image_2.jpg" alt="" class="img-fluid">
             </p>
-            <p>Quisquam esse aliquam fuga distinctio, quidem delectus veritatis reiciendis. Nihil explicabo quod, est eos ipsum. Unde aut non tenetur tempore, nisi culpa voluptate maiores officiis quis vel ab consectetur suscipit veritatis nulla quos quia aspernatur perferendis, libero sint. Error, velit, porro. Deserunt minus, quibusdam iste enim veniam, modi rem maiores.</p>
-            <p>Odit voluptatibus, eveniet vel nihil cum ullam dolores laborum, quo velit commodi rerum eum quidem pariatur! Quia fuga iste tenetur, ipsa vel nisi in dolorum consequatur, veritatis porro explicabo soluta commodi libero voluptatem similique id quidem? Blanditiis voluptates aperiam non magni. Reprehenderit nobis odit inventore, quia laboriosam harum excepturi ea.</p>
-            <p>Adipisci vero culpa, eius nobis soluta. Dolore, maxime ullam ipsam quidem, dolor distinctio similique asperiores voluptas enim, exercitationem ratione aut adipisci modi quod quibusdam iusto, voluptates beatae iure nemo itaque laborum. Consequuntur et pariatur totam fuga eligendi vero dolorum provident. Voluptatibus, veritatis. Beatae numquam nam ab voluptatibus culpa, tenetur recusandae!</p>
-            <p>Voluptas dolores dignissimos dolorum temporibus, autem aliquam ducimus at officia adipisci quasi nemo a perspiciatis provident magni laboriosam repudiandae iure iusto commodi debitis est blanditiis alias laborum sint dolore. Dolores, iure, reprehenderit. Error provident, pariatur cupiditate soluta doloremque aut ratione. Harum voluptates mollitia illo minus praesentium, rerum ipsa debitis, inventore?</p>
+            <h2 class="mb-3 mt-5">Vậy, tại sao bạn sử dụng MarTech?</h2>
+            <p>Ngày nay, bạn có thể làm mọi thứ từ việc phát tán nội dung trên quy mô cực lớn đến quản lý tương tác của khách hàng hay xem “bản đồ nhiệt” những hành động của visitors trên website của bạn (rê chuột, giữ chuột, click chuột, thời gian ở lại trang web, trang con visitor mở ra,…). Tất cả các công cụ này đều có một mục đích: Nó cho phép chúng ta marketing rộng rãi và hiệu quả hơn cũng như đánh giá, phân tích dữ liệu khách hàng một cách thực tế về hiệu suất. Đó chắc chắn là là một bước tiến lớn so với Marketing truyền thống thời xưa, khi chúng ta không có nhiều cách để tiếp cận khách hàng và đặc biệt chúng ta không có khả năng thu thập các chỉ số tương tác rất kỳ diệu ngày hôm nay. Tuy nhiên, một vấn đề lớn là các nền tảng MarTech đang phát triển cực kỳ mạnh mẽ, tốc độ gia tăng về cả số lượng và tính năng của các công cụ MarTech là cực lớn khiến chúng ta quên mất lý do sử dụng chúng ngay từ ban đầu. Ví dụ, lấy mindset hoàn toàn hợp lý này mà một bộ phận Marketing có thể đưa ra:</p>
+<p>“Chúng tôi đã nhận được 6.400 lượt thích trên bài đăng trên Twitter vào Thứ Bảy, 3.500 vào Chủ Nhật, 7.000 vào Thứ Hai và 7.350 trong hôm nay. Nhìn chung, chúng tôi đang có xu hướng nhận được nhiều tương tác hơn – một dấu hiệu tuyệt vời.“</p>
+<p>“Chúng tôi gặp sự cố liên tục mà chúng tôi thường thấy trong nền tảng trải nghiệm khách hàng của mình, nhưng chúng tôi đã phát triển một quy trình hiệu quả để giải quyết vấn đề đó. Chúng ta có thể tạo ra những thủ tục nào khác?”</p>
+<p>“Khá thú vị – chúng tôi có thể gửi khuyến mại qua email này tới 100.000 người đăng ký trong danh sách email chỉ với một cú nhấp chuột.”</p>
+<p>Khi bạn hiểu điều gì đang khiến hoạt động marketing hiệu quả, bạn có thể tăng gấp đôi nguồn lực cho những hoạt động đó hoặc điều chỉnh những gì cần khắc phục. Cuối cùng, bạn sẽ tạo ra một chiếc máy thúc đẩy doanh số và tạo ra một trải nghiệm khách hàng tuyệt vời và khiến họ hài lòng.</p>
             <div class="tag-widget post-tag-container mb-5 mt-5">
               <div class="tagcloud">
-                <a href="#" class="tag-cloud-link">Life</a>
-                <a href="#" class="tag-cloud-link">Sport</a>
-                <a href="#" class="tag-cloud-link">Tech</a>
-                <a href="#" class="tag-cloud-link">Travel</a>
-              </div>
-            </div>
-            
-            <div class="about-author d-flex p-4 bg-light">
-              <div class="bio mr-5">
-                <img src="images/person_1.jpg" alt="Image placeholder" class="img-fluid mb-4">
-              </div>
-              <div class="desc">
-                <h3>George Washington</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus itaque, autem necessitatibus voluptate quod mollitia delectus aut, sunt placeat nam vero culpa sapiente consectetur similique, inventore eos fugit cupiditate numquam!</p>
+                <a href="#" class="tag-cloud-link">MarTech</a>
+                <a href="#" class="tag-cloud-link">Marketing</a>
+                <a href="#" class="tag-cloud-link">Technology</a>
               </div>
             </div>
 
