--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-	          <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-	          <li class="nav-item"><a href="blog.html" class="nav-link">Articles</a></li>
-	          <li class="nav-item"><a href="about.html" class="nav-link">Team</a></li>
-	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+	          <li class="nav-item active"><a href="index.html" class="nav-link">Trang chủ</a></li>
+	          <li class="nav-item"><a href="blog.html" class="nav-link">MarTech</a></li>
+	          <li class="nav-item"><a href="about.html" class="nav-link">Chia sẻ</a></li>
+	          <li class="nav-item"><a href="contact.html" class="nav-link">Liên hệ</a></li>
 	        </ul>
 	      </div>
 	    </div>
