--- a/blog-single.html
+++ b/blog-single.html
@@ -95,13 +95,10 @@
 
 <ul>
                 <li class="comment">
-                  <div class="vcard bio">
-                    <img src="images/person_1.jpg" alt="Image placeholder">
-                  </div>
                   <div class="comment-body">
                     <h3>Uyên</h3>
-                    <div class="meta mb-3">October 10, 2020 at 2:21pm</div>
-                    <p>Tuyệt vời</p>
+                    <div class="meta mb-3">October 10, 2020 at 2:21 pm</div>
+                    <p>Tuyệt vời!!! Một bài viết xuất sắc!!!</p>
                     <p><a href="#" class="reply">Reply</a></p>
                   </div>
                 </li>
