--- a/blog-single.html
+++ b/blog-single.html
@@ -194,14 +194,14 @@
             <div class="sidebar-box ftco-animate">
               <h3>Tag Cloud</h3>
               <div class="tagcloud">
-                <a href="#" class="tag-cloud-link">cat</a>
-                <a href="#" class="tag-cloud-link">abstract</a>
-                <a href="#" class="tag-cloud-link">people</a>
-                <a href="#" class="tag-cloud-link">person</a>
-                <a href="#" class="tag-cloud-link">model</a>
-                <a href="#" class="tag-cloud-link">delicious</a>
-                <a href="#" class="tag-cloud-link">desserts</a>
-                <a href="#" class="tag-cloud-link">drinks</a>
+                <a href="#" class="tag-cloud-link">MarTech</a>
+                <a href="#" class="tag-cloud-link">Marketing</a>
+                <a href="#" class="tag-cloud-link">Technology</a>
+                <a href="#" class="tag-cloud-link">BigData</a>
+                <a href="#" class="tag-cloud-link">AI</a>
+                <a href="#" class="tag-cloud-link">Data Analyst</a>
+                <a href="#" class="tag-cloud-link">Marketing Tragedy</a>
+                <a href="#" class="tag-cloud-link">Digital Marketing</a>
               </div>
             </div>
 
