--- a/blog-single.html
+++ b/blog-single.html
@@ -200,7 +200,7 @@
                 <a href="#" class="tag-cloud-link">BigData</a>
                 <a href="#" class="tag-cloud-link">AI</a>
                 <a href="#" class="tag-cloud-link">Data Analyst</a>
-                <a href="#" class="tag-cloud-link">Marketing Tragedy</a>
+                <a href="#" class="tag-cloud-link">Marketing Strategy</a>
                 <a href="#" class="tag-cloud-link">Digital Marketing</a>
               </div>
             </div>
