--- a/blog-single.html
+++ b/blog-single.html
@@ -61,7 +61,7 @@
           <div class="col-lg-8 ftco-animate">
             <p>Chắc hẳn đâu đó bạn đã từng nghe nhắc đến thuật ngữ Marketing Technology (hoặc MarTech), vậy bạn có bao giờ tự hỏi rằng MarTech là gì? Và vì sao gần đây MarTech đã và đang trở thành chủ đề được tranh luận sôi nổi trong giới marketer?</p>
 
-<p>Thông qua bài viết này, sẽ giúp bạn có cái nhìn chính xác hơn về xu hướng Marketing Technology và cách thức MarTech tác động và thay đổi môi trường kinh doanh hiện nay.</p>
+<p>Thông qua bài viết này, MarTech Zone sẽ giúp bạn có cái nhìn chính xác hơn về xu hướng Marketing Technology và cách thức MarTech tác động và thay đổi môi trường kinh doanh hiện nay.</p>
 
 <h2 class="mb-3 mt-5">1. Tổng quan về MarTech</h2>
 
