--- a/blog-single.html
+++ b/blog-single.html
@@ -146,11 +146,11 @@
             <div class="sidebar-box ftco-animate">
               <div class="categories">
                 <h3>Categories</h3>
-                <li><a href="#">Illustration <span class="ion-ios-arrow-forward"></span></a></li>
-                <li><a href="#">Branding <span class="ion-ios-arrow-forward"></span></a></li>
-                <li><a href="#">Application <span class="ion-ios-arrow-forward"></span></a></li>
-                <li><a href="#">Design <span class="ion-ios-arrow-forward"></span></a></li>
                 <li><a href="#">Marketing <span class="ion-ios-arrow-forward"></span></a></li>
+                <li><a href="#">Technology <span class="ion-ios-arrow-forward"></span></a></li>
+                <li><a href="#">Marketing Analyst <span class="ion-ios-arrow-forward"></span></a></li>
+                <li><a href="#">Email Marketing <span class="ion-ios-arrow-forward"></span></a></li>
+                <li><a href="#">Chưa nghĩ ra <span class="ion-ios-arrow-forward"></span></a></li>
               </div>
             </div>
 
@@ -204,7 +204,7 @@
                 <a href="#" class="tag-cloud-link">Digital Marketing</a>
               </div>
             </div>
-          </div>
+  
 
         </div>
       </div>
