--- a/blog-single.html
+++ b/blog-single.html
@@ -92,8 +92,9 @@
               </div>
             </div>
 
-
-<ul>
+            <div class="pt-5 mt-5">
+              <h3 class="mb-5">1 Comments</h3>
+              <ul class="comment-list">
                 <li class="comment">
                   <div class="comment-body">
                     <h3>Uyên</h3>
