--- a/blog-single.html
+++ b/blog-single.html
@@ -101,6 +101,7 @@
                     <div class="meta mb-3">October 10, 2020 at 2:21 pm</div>
                     <p>Tuyệt vời!!! Một bài viết xuất sắc!!!</p>
                     <p><a href="#" class="reply">Reply</a></p>
+                  </div>
                     </li>
                      <li class="comment">
                   <div class="comment-body">
