--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Readit - Free Bootstrap 4 Template by Colorlib</title>
+    <title>MarTech Zone | Cuộc chạy đua của tương lai</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -26,17 +26,17 @@
     
 	  <nav class="navbar px-md-0 navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">Read<i>it</i>.</a>
+	      <a class="navbar-brand" href="index.html">MarTech<i>Zone</i>.</a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-	          <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-	          <li class="nav-item"><a href="blog.html" class="nav-link">Articles</a></li>
+	          <li class="nav-item"><a href="index.html" class="nav-link">Trang chủ</a></li>
+	          <li class="nav-item"><a href="blog.html" class="nav-link">MarTech</a></li>
 	          <li class="nav-item active"><a href="about.html" class="nav-link">Team</a></li>
-	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+	          <li class="nav-item"><a href="contact.html" class="nav-link">Liên hệ</a></li>
 	        </ul>
 	      </div>
 	    </div>
@@ -120,7 +120,7 @@
                     <div class="d-flex align-items-center">
                     	<div class="user-img" style="background-image: url(images/person_1.jpg)"></div>
                     	<div class="pl-3">
-		                    <p class="name">Roger Scott</p>
+		                    <p class="name">Quynh Pham</p>
 		                    <span class="position">Marketing Manager</span>
 		                  </div>
 	                  </div>
@@ -134,8 +134,8 @@
                     <div class="d-flex align-items-center">
                     	<div class="user-img" style="background-image: url(images/person_2.jpg)"></div>
                     	<div class="pl-3">
-		                    <p class="name">Roger Scott</p>
-		                    <span class="position">Marketing Manager</span>
+		                    <p class="name">Thuy Linh Tran</p>
+		                    <span class="position">Creative Director</span>
 		                  </div>
 	                  </div>
                   </div>
@@ -148,8 +148,8 @@
                     <div class="d-flex align-items-center">
                     	<div class="user-img" style="background-image: url(images/person_3.jpg)"></div>
                     	<div class="pl-3">
-		                    <p class="name">Roger Scott</p>
-		                    <span class="position">Marketing Manager</span>
+		                    <p class="name">Huong Ho</p>
+		                    <span class="position">Account Manager</span>
 		                  </div>
 	                  </div>
                   </div>
@@ -162,8 +162,8 @@
                     <div class="d-flex align-items-center">
                     	<div class="user-img" style="background-image: url(images/person_1.jpg)"></div>
                     	<div class="pl-3">
-		                    <p class="name">Roger Scott</p>
-		                    <span class="position">Marketing Manager</span>
+		                    <p class="name">Uyen Thu Nguyen</p>
+		                    <span class="position">Brand Manager</span>
 		                  </div>
 	                  </div>
                   </div>
@@ -176,8 +176,8 @@
                     <div class="d-flex align-items-center">
                     	<div class="user-img" style="background-image: url(images/person_2.jpg)"></div>
                     	<div class="pl-3">
-		                    <p class="name">Roger Scott</p>
-		                    <span class="position">Marketing Manager</span>
+		                    <p class="name">Phuong Dung Nguyen</p>
+		                    <span class="position">Planning Manager</span>
 		                  </div>
 	                  </div>
                   </div>
@@ -195,8 +195,8 @@
         <div class="row mb-5">
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-              <h2 class="logo"><a href="#">Read<span>it</span>.</a></h2>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+              <h2 class="logo"><a href="#">MarTech<span>Zone</span>.</a></h2>
+              <p>"Technology must become part of marketing's DNA" - Scott Brinke</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                 <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -208,9 +208,9 @@
              <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">latest News</h2>
               <div class="block-21 mb-4 d-flex">
-	              <a class="img mr-4 rounded" style="background-image: url(images/image_1.jpg);"></a>
+	              <a class="img mr-4 rounded" style="background-image: url(images/image_2.jpg);"></a>
 	              <div class="text">
-	                <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
+	                <h3 class="heading"><a href="#">MarTech là gì?</a></h3>
 	                <div class="meta">
 	                  <div><a href="#"></span> Oct. 16, 2019</a></div>
 	                  <div><a href="#"></span> Admin</a></div>
@@ -221,7 +221,7 @@
 	            <div class="block-21 mb-4 d-flex">
 	              <a class="img mr-4 rounded" style="background-image: url(images/image_2.jpg);"></a>
 	              <div class="text">
-	                <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
+	                <h3 class="heading"><a href="#">Xu hướng MarTech trong năm 2020</a></h3>
 	                <div class="meta">
 	                  <div><a href="#"></span> Oct. 16, 2019</a></div>
 	                  <div><a href="#"></span> Admin</a></div>
@@ -259,7 +259,7 @@
           <div class="col-md-12 text-center">
 
             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | MarTechZone Blog <i class="icon-heart color-danger" aria-hidden="true"></i>
   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
           </div>
         </div>
