--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Readit - Free Bootstrap 4 Template by Colorlib</title>
+    <title>MarTech Zone - Cuộc chạy đua của tương lai</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -26,7 +26,7 @@
     
 	  <nav class="navbar px-md-0 navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">Read<i>it</i>.</a>
+	      <a class="navbar-brand" href="index.html">MarTech<i>Zone</i>.</a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -34,9 +34,9 @@
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
 	          <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-	          <li class="nav-item active"><a href="blog.html" class="nav-link">Articles</a></li>
+	          <li class="nav-item active"><a href="blog.html" class="nav-link">MarTech</a></li>
 	          <li class="nav-item"><a href="about.html" class="nav-link">Team</a></li>
-	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+	          <li class="nav-item"><a href="contact.html" class="nav-link">Liên hệ</a></li>
 	        </ul>
 	      </div>
 	    </div>
@@ -49,11 +49,11 @@
         <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-start" data-scrollax-parent="true">
           <div class="col-md-12 ftco-animate">
           	<h2 class="subheading">Hello! Welcome to</h2>
-          	<h1 class="mb-4 mb-md-0">Readit blog</h1>
+          	<h1 class="mb-4 mb-md-0">MarTech Zone blog</h1>
           	<div class="row">
           		<div class="col-md-7">
           			<div class="text">
-	          			<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+	          			<p>"Technology must become part of marketing's DNA" - Scott Brinke</p>
 	          			<div class="mouse">
 										<a href="#" class="mouse-icon">
 											<div class="mouse-wheel"><span class="ion-ios-arrow-round-down"></span></div>
@@ -84,7 +84,7 @@
               			<span class="mos">October</span>
               		</div>
               	</div>
-              	<h3 class="heading mb-3"><a href="#">All you want to know about industrial laws</a></h3>
+              	<h3 class="heading mb-3"><a href="Ngan-xep-cong-nghe-MarTech-Stack.html">MarTech Stack là gì và làm cách nào để xây dựng một ngăn xếp công nghệ</a></h3>
                 <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
                 <p><a href="#" class="btn-custom"><span class="ion-ios-arrow-round-forward mr-3"></span>Read more</a></p>
               </div>
@@ -104,7 +104,7 @@
               			<span class="mos">October</span>
               		</div>
               	</div>
-              	<h3 class="heading mb-3"><a href="#">All you want to know about industrial laws</a></h3>
+              	<h3 class="heading mb-3"><a href="Ai-MarTech.html">Xu hướng AI và MarTech - Doanh nghiệp có nên đầu tư?</a></h3>
                 <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
                 <p><a href="#" class="btn-custom"><span class="ion-ios-arrow-round-forward mr-3"></span>Read more</a></p>
               </div>
@@ -124,7 +124,8 @@
               			<span class="mos">October</span>
               		</div>
               	</div>
-              	<h3 class="heading mb-3"><a href="#">All you want to know about industrial laws</a></h3>
+              	<h3 class="heading mb-3"><a href="Push-Notification-Pushtimize.html">Nền tảng Pushtimize và Thông báo đẩy - Push Notification
+</a></h3>
                 <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
                 <p><a href="#" class="btn-custom"><span class="ion-ios-arrow-round-forward mr-3"></span>Read more</a></p>
               </div>
@@ -145,7 +146,7 @@
               			<span class="mos">October</span>
               		</div>
               	</div>
-              	<h3 class="heading mb-3"><a href="#">All you want to know about industrial laws</a></h3>
+              	<h3 class="heading mb-3"><a href="Marketing-Automation-2020.html">Marketing Automation năm 2020</a></h3>
                 <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
                 <p><a href="#" class="btn-custom"><span class="ion-ios-arrow-round-forward mr-3"></span>Read more</a></p>
               </div>
@@ -153,7 +154,7 @@
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="blog-single.html" class="block-20" style="background-image: url('images/image_5.jpg');">
+              <a href="blog-single.html" class="block-20" style="background-image: url('images/crm-la-gi.png');">
               </a>
               <div class="text p-4 float-right d-block">
               	<div class="topper d-flex align-items-center">
@@ -165,7 +166,7 @@
               			<span class="mos">October</span>
               		</div>
               	</div>
-              	<h3 class="heading mb-3"><a href="#">All you want to know about industrial laws</a></h3>
+              	<h3 class="heading mb-3"><a href="CRM-la-gi.html">Hiểu về quản lý quan hệ khách hàng (CRM)</a></h3>
                 <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
                 <p><a href="#" class="btn-custom"><span class="ion-ios-arrow-round-forward mr-3"></span>Read more</a></p>
               </div>
@@ -173,7 +174,7 @@
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="blog-single.html" class="block-20" style="background-image: url('images/image_6.jpg');">
+              <a href="blog-single.html" class="block-20" style="background-image: url('images/cdp-la-gi.jpg');">
               </a>
               <div class="text p-4 float-right d-block">
               	<div class="topper d-flex align-items-center">
@@ -185,7 +186,7 @@
               			<span class="mos">October</span>
               		</div>
               	</div>
-              	<h3 class="heading mb-3"><a href="#">All you want to know about industrial laws</a></h3>
+              	<h3 class="heading mb-3"><a href="cdp-la-gi.html">CDP (Customer Data Platform) là gì?</a></h3>
                 <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
                 <p><a href="#" class="btn-custom"><span class="ion-ios-arrow-round-forward mr-3"></span>Read more</a></p>
               </div>
@@ -194,7 +195,7 @@
 
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="blog-single.html" class="block-20" style="background-image: url('images/image_7.jpg');">
+            <a href="blog-single.html" class="block-20" style="background-image: url('images/xu-huong-martech.png');">
               </a>
               <div class="text p-4 float-right d-block">
               	<div class="topper d-flex align-items-center">
@@ -206,7 +207,7 @@
               			<span class="mos">October</span>
               		</div>
               	</div>
-              	<h3 class="heading mb-3"><a href="#">All you want to know about industrial laws</a></h3>
+              	<h3 class="heading mb-3"><a href="xu-huong-martech.html">Xu hướng Marketing Technology (MarTech) 2019-2020</a></h3>
                 <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
                 <p><a href="#" class="btn-custom"><span class="ion-ios-arrow-round-forward mr-3"></span>Read more</a></p>
               </div>
@@ -214,7 +215,7 @@
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="blog-single.html" class="block-20" style="background-image: url('images/image_8.jpg');">
+              <a href="blog-single.html" class="block-20" style="background-image: url('images/pasted image 0.png');">
               </a>
               <div class="text p-4 float-right d-block">
               	<div class="topper d-flex align-items-center">
@@ -226,7 +227,7 @@
               			<span class="mos">October</span>
               		</div>
               	</div>
-              	<h3 class="heading mb-3"><a href="#">All you want to know about industrial laws</a></h3>
+              	<h3 class="heading mb-3"><a href="martech-covid-19.html"> MarTech trong bối cảnh Covid-19</a></h3>
                 <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
                 <p><a href="#" class="btn-custom"><span class="ion-ios-arrow-round-forward mr-3"></span>Read more</a></p>
               </div>
@@ -234,7 +235,7 @@
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="blog-single.html" class="block-20" style="background-image: url('images/image_9.jpg');">
+              <a href="blog-single.html" class="block-20" style="background-image: url('images/image_2.jpg');">
               </a>
               <div class="text p-4 float-right d-block">
               	<div class="topper d-flex align-items-center">
@@ -246,7 +247,7 @@
               			<span class="mos">October</span>
               		</div>
               	</div>
-              	<h3 class="heading mb-3"><a href="#">All you want to know about industrial laws</a></h3>
+              	<h3 class="heading mb-3"><a href="martech-la-gi.html">MarTech là gì? | What is MarTech?</a></h3>
                 <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
                 <p><a href="#" class="btn-custom"><span class="ion-ios-arrow-round-forward mr-3"></span>Read more</a></p>
               </div>
@@ -276,8 +277,8 @@
         <div class="row mb-5">
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-              <h2 class="logo"><a href="#">Read<span>it</span>.</a></h2>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+              <h2 class="logo"><a href="#">MarTech<span>Zone</span>.</a></h2>
+              <p>"Technology must become part of marketing's DNA" - Scott Brinke</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                 <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -317,9 +318,9 @@
               <h2 class="ftco-heading-2">Information</h2>
               <ul class="list-unstyled">
                 <li><a href="#" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>Home</a></li>
-                <li><a href="#" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>About</a></li>
-                <li><a href="#" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>Articles</a></li>
-                <li><a href="#" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>Contact</a></li>
+                <li><a href="#" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>MarTech</a></li>
+                <li><a href="#" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>Team</a></li>
+                <li><a href="#" class="py-1 d-block"><span class="ion-ios-arrow-forward mr-3"></span>Liên hệ</a></li>
               </ul>
             </div>
           </div>
@@ -328,7 +329,7 @@
             	<h2 class="ftco-heading-2">Have a Questions?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
+	                <li><span class="icon icon-map-marker"></span><span class="text">10 Trần Phú, Hà Đông, Hà Nội</span></li>
 	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
 	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a></li>
 	              </ul>
@@ -340,7 +341,7 @@
           <div class="col-md-12 text-center">
 
             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | MarTech Zone Blog <i class="icon-heart color-danger" aria-hidden="true"></i>
   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
           </div>
         </div>
