--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
    							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
    								<div class="text w-100 pl-md-3">
    									<span class="subheading">MarTech</span>
-   									<h2><a href="martech-la-gi.html">MarTech Zone là gì?</a></h2>
+   									<h2><a href="Ngan-xep-cong-nghe-MarTech-Stack.html">MarTech Stack là gì và làm cách nào để xây dựng một ngăn xếp công nghệ</a></h2>
    									<ul class="media-social list-unstyled">
 			                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
 			                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -109,7 +109,7 @@
    							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
    								<div class="text w-100 pl-md-3">
    									<span class="subheading">MarTech</span>
-   									<h2><a href="xu-huong-martech.html">Xu hướng Marketing Technology (MarTech) 2019-2010</a></h2>
+   									<h2><a href="Ai-MarTech.html">Xu hướng AI và MarTech - Doanh nghiệp có nên đầu tư?</a></h2>
    									<ul class="media-social list-unstyled">
 			                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
 			                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -130,7 +130,7 @@
    							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
    								<div class="text w-100 pl-md-3">
    									<span class="subheading">MarTech</span>
-   									<h2><a href="martech-covid-19.html">MarTech trong bối cảnh Covid-19</a></h2>
+   									<h2><a href="Push-Notification-Pushtimize.html">Nền tảng Pushtimize và Thông báo đẩy - Push Notification</a></h2>
    									<ul class="media-social list-unstyled">
 			                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
 			                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -151,7 +151,7 @@
    							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
    								<div class="text w-100 pl-md-3">
    									<span class="subheading">MarTech</span>
-   									<h2><a href="cdp-la-gi.html">CDP (Customer Data Platform) là gì?</a></h2>
+   									<h2><a href="Marketing-Automation-2020.html">Marketing Automation năm 2020</a></h2>
    									<ul class="media-social list-unstyled">
 			                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
 			                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -167,12 +167,12 @@
    					<div class="case">
    						<div class="row">
    							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
-   								<a href="blog-single.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/image_5.jpg);"></a>
+   								<a href="blog-single.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/crm-la-gi.png);"></a>
    							</div>
    							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
    								<div class="text w-100 pl-md-3">
-   									<span class="subheading">Illustration</span>
-   									<h2><a href="blog-single.html">Build a website in minutes with Adobe Templates</a></h2>
+   									<span class="subheading">MarTech</span>
+   									<h2><a href="blog-single.html">Hiểu về quản lý quan hệ khách hàng (CRM)</a></h2>
    									<ul class="media-social list-unstyled">
 			                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
 			                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -188,12 +188,12 @@
    					<div class="case">
    						<div class="row">
    							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
-   								<a href="blog-single.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/image_6.jpg);"></a>
+   								<a href="blog-single.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/cdp-la-gi.jpg);"></a>
    							</div>
    							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
    								<div class="text w-100 pl-md-3">
-   									<span class="subheading">Illustration</span>
-   									<h2><a href="blog-single.html">Build a website in minutes with Adobe Templates</a></h2>
+   									<span class="subheading">MarTech</span>
+   									<h2><a href="blog-single.html">CDP (Customer Data Platform) là gì?</a></h2>
    									<ul class="media-social list-unstyled">
 			                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
 			                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -209,12 +209,12 @@
    					<div class="case">
    						<div class="row">
    							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
-   								<a href="blog-single.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/image_7.jpg);"></a>
+   								<a href="blog-single.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/xu-huong-martech.png);"></a>
    							</div>
    							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
    								<div class="text w-100 pl-md-3">
-   									<span class="subheading">Illustration</span>
-   									<h2><a href="blog-single.html">Build a website in minutes with Adobe Templates</a></h2>
+   									<span class="subheading">MarTech</span>
+   									<h2><a href="xu-huong-martech.html">Xu hướng Marketing Technology (MarTech) 2019-2020</a></h2>
    									<ul class="media-social list-unstyled">
 			                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
 			                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -230,12 +230,12 @@
    					<div class="case">
    						<div class="row">
    							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
-   								<a href="blog-single.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/image_8.jpg);"></a>
+   								<a href="blog-single.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/pasted image 0.png);"></a>
    							</div>
    							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
    								<div class="text w-100 pl-md-3">
-   									<span class="subheading">Illustration</span>
-   									<h2><a href="blog-single.html">Build a website in minutes with Adobe Templates</a></h2>
+   									<span class="subheading">MarTech</span>
+   									<h2><a href="blog-single.html">MarTech trong bối cảnh Covid-19</a></h2>
    									<ul class="media-social list-unstyled">
 			                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
 			                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -251,12 +251,12 @@
    					<div class="case">
    						<div class="row">
    							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
-   								<a href="blog-single.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/image_9.jpg);"></a>
+   								<a href="blog-single.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/image_2.jpg);"></a>
    							</div>
    							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
    								<div class="text w-100 pl-md-3">
-   									<span class="subheading">Illustration</span>
-   									<h2><a href="blog-single.html">MarTech là gì | What is MarTech</a></h2>
+   									<span class="subheading">MarTech</span>
+   									<h2><a href="martech-la-gi.html">MarTech là gì | What is MarTech</a></h2>
    									<ul class="media-social list-unstyled">
 			                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
 			                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
